css/style.css
/*Overrides*/
#bootstrapoverrides {
    position: absolute;
    height:100%;
    width: 100%;
    margin:0px;
    padding:0px;
    /*border-radius: 0px !important;*/
    /*color:#606060;*/
    /*background-color:#E8E8E8;*/
    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
}

#bootstrapoverridesformap {
    overflow: hidden;
    position: absolute;
    height:100%;
    width: 100%;
    margin:0px;
    padding:0px;
}

/*Google Fonts Loaded
font-family: 'Playfair Display', serif;

*/

.wrapper {
    margin: 50px 0vw;
}

#bootstrapoverrides_ethos {
    position: absolute;
    height:100%;
    width: 100%;
    margin:0px;
    padding:0px;
    /*border-radius: 0px !important;*/
    /*color:#606060;*/
    /*background-color:#E8E8E8;*/
    /*font-family: ""Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif";*/
}

/*custom font for ethos fade-in text stuff*/
#bootstrapoverrides_ethos h1 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h2 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h3 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h4 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h5 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos h6 { font-family: 'Merriweather', serif; }
#bootstrapoverrides_ethos p { font-family: 'Merriweather', serif; }



/*I have fonts sepearated from the #bootstrapoverrides css because otherwise the css is not 'ranked' high enough to override the default bootstrap css. I think this might be better best practices*/ 
h1, h2, h3, h4, h5, h6, p {
    font-family: 'Raleway', sans-serif; 
    /*font-family: 'Merriweather', serif;*/
    /*font-family: 'Lato', sans-serif*/
}

/*#bootstrapoverrides button {
    border-radius: 0 !important;
}*/

.row {
    width:100vw;
    margin-left:0px;
    margin-right:0px;
    padding-left: 0px;
    padding-right:0px;
}

.wow {visibility: hidden;}


.text-vertical-center {
    text-align: center;
    vertical-align: middle;
}

.alignright {
    text-align: right;
    vertical-align: middle;
}

#ethos {
    top:0;
    height: 100%;
    position: fixed;
    background-color: white;
    z-index: 10; 
    width: 100%;
    text-align: center;
    padding: 10% 8%;
}

#map {
    position: fixed;
    top:0;
    bottom:0;
    height:100%;
    width: 100%; /*width 80% with right:0*/;
    z-index: 0;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
    /*border: solid 10px black;*/
}

#sheet {
    position: absolute;
    width:100%;
    height: 100%;
    opacity:0.5;
    background-color: white;
    z-index: -1;
}

    .sheetZindex1 {
        z-index: 1 !important;
    }

#map canvas {
    cursor:crosshair;
}

.draw {
    position:relative;
    z-index:1;
    width:80px;
    height:80px;
    padding:20px;
}

#mapViewControls {
    position: fixed;
    top: 16vw;
    left: 2vh;
    z-index: 2;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition:all 0.3s;
    align-items: end;
}

.mapboxgl-ctrl-logo {
    z-index: 4;
}

.mapboxgl-ctrl-group, .mapboxgl-ctrl-geocoder {
    border: solid 1px #8a8472;
    border-radius: 0px; 
    box-shadow: 0px;
}

#mapViewControls > .mapboxgl-ctrl-group {
    float:right;
    margin-bottom: 1.5vh;
    padding:10px;
    box-shadow: 3px 3px 6px grey;
}

#mapViewControls > .mapboxgl-ctrl-group > button {
    width:100px;
    height:100px;
}

#mapViewControls > .mapboxgl-ctrl-group > button > span {
    background-size:contain;
}


#mapViewControls > .mapboxgl-ctrl-geocoder {
    width: 500px;
    margin-bottom: 15px;
}

@media (min-width: 1081px) {
    .mapboxgl-ctrl-icon.mapboxgl-ctrl-compass > .mapboxgl-ctrl-compass-arrow {
        width:70px;
        height:70px;
    }
}

@media (min-width: 1081px) {
    #mapViewControls > .mapboxgl-ctrl-group > button {
        width:58px;
        height:40px;
    }

    #mapViewControls > .mapboxgl-ctrl-group {
        padding:0px;
    }

    #mapViewControls {
        top:100px;
        left:calc(3vw + 10px);
    }

}

/*Logo*/
    #logo {
        position: absolute;
        left: 3vw;
        z-index: 4;
        background: #363636;
        width: 14vw;
        height: 14vw;
        font-size: 8vw;
        color: white;
        text-align: center;
        font-family: auto;
        line-height: 14vw;
        box-shadow: 3px 3px 6px grey;

    }

    @media (min-width: 1081px) {
        #logo{
            width:80px;
            height:80px;
            font-size:40px;
            line-height: 80px;            
        }
    }

/*Search Bar*/
    #geocoder {
        position: absolute;
        z-index: 1;
        width: 82vw;
        left:calc(15vw + 40px);
        top:2vw;
        -webkit-transition: all 0.4s;
        -moz-transition: all 0.4s;
        -o-transition: all 0.4s;
        transition:all 0.4s;

    }

    #geocoder .mapboxgl-ctrl-geocoder{
        box-shadow: 3px 3px 6px grey;
        height: 10vw;
        margin:0px;
    }

    #geocoder .mapboxgl-ctrl-geocoder--button {
        border-radius:0px;
        width: 8vw;
        height: 8vw;
        font-size: 45px;
        z-index: 5;
        background-color: #c3c3c3;
    }

    #geocoder .mapboxgl-ctrl-geocoder--icon-search {
        display: none;
    }

    #geocoder .mapboxgl-ctrl-geocoder input[type='text'] {
        font-size: 2vh;
        margin-left: 1vw;
        height:100%;
        padding-right:10vw;

    }

    #geocoder .mapboxgl-ctrl-geocoder--icon .mapboxgl-ctrl-geocoder--icon-close {
        position: relative;
        transform: scale(4);
    }
/* ... */

